--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-Babel==2.3.4
-Jinja2==2.10
-Mako==1.0.4
-Markdown==2.6.11
-MarkupSafe==1.0
-Pillow==4.0.0
-PyPDF2==1.26.0
-PyYAML==3.13
-Werkzeug==0.14.1
-XlsxWriter==0.9.3
 absl-py==0.3.0
 astor==0.7.1
+Babel==2.3.4
+beautifulsoup4==4.6.1
 bleach==1.5.0
 bokeh==0.13.0
 decorator==4.0.10
@@ -17,41 +9,52 @@ docutils==0.12
 ebaysdk==2.1.5
 feedparser==5.2.1
 gast==0.2.0
-gevent==1.1.2 ; sys_platform != 'win32'
+gevent==1.1.2
 greenlet==0.4.10
 grpcio==1.14.0
 html2text==2016.9.19
 html5lib==0.9999999
-lxml ; sys_platform == 'win32'
-lxml==3.7.1 ; sys_platform != 'win32'
+Jinja2==2.10
+lxml==3.7.1
+Mako==1.0.4
+Markdown==2.6.11
+MarkupSafe==1.0
 mock==2.0.0
 num2words==0.5.4
 numpy==1.15.0
+odoo==11.0
 ofxparse==0.16
+olefile==0.45.1
 packaging==17.1
 pandas==0.23.4
 passlib==1.6.5
+pbr==4.2.0
+Pillow==4.0.0
 protobuf==3.6.0
-psutil==4.3.1; sys_platform != 'win32'
-psycopg2==2.7.3.1; sys_platform != 'win32'
+psutil==4.3.1
+psycopg2==2.7.3.1
 pydot==1.2.3
-pyldap==2.4.28; sys_platform != 'win32'
+pyldap==2.4.28
 pyparsing==2.2.0
-pypiwin32 ; sys_platform == 'win32'
+PyPDF2==1.26.0
 pyserial==3.1.1
 python-dateutil==2.7.3
+python-stdnum==1.9
 pytz==2018.5
 pyusb==1.0.0
+PyYAML==3.13
 qrcode==5.3
 reportlab==3.3.0
 requests==2.11.1
 six==1.11.0
 suds-jurko==0.6
-tensorflow-tensorboard==1.5.1
 tensorflow==1.5.0
+tensorflow-tensorboard==1.5.1
 termcolor==1.1.0
 tornado==5.1
 vatnumber==1.2
 vobject==0.9.3
+Werkzeug==0.14.1
 xlrd==1.0.0
-xlwt==1.3.*
+XlsxWriter==0.9.3
+xlwt==1.3.0
